# ids-cicids2017-critique

./: .env-example  .gitattributes  .gitignore  KNOWN_LIMITATIONS.md  LICENSE  README.md  REQUIREMENTS_CHECKLIST.md  pyproject.toml
figures/: dedup_stats.txt
notebooks/: ids_cicids2017_critique.ipynb  metrics_export.json
references/: Course Overview - Data Science Methods in Cyber Security.md  dataset_inventory.md  source_article.md
report/: report.tex
src/ids_critique/: __init__.py  config.py  critique.py  data.py  evaluate.py  features.py
tests/: test_data.py  test_evaluate_critique.py  test_features.py
